--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#4C115A",
-        "titleBar.activeBackground": "#6A187E",
-        "titleBar.activeForeground": "#FEFBFE"
+        "activityBar.background": "#023147",
+        "titleBar.activeBackground": "#034563",
+        "titleBar.activeForeground": "#F3FBFF"
     }
 }
